Fix: Change mobile breakpoint to 992px to fix layout overlap on tablet viewports like iPad Air

--- a/styles.css
+++ b/styles.css
@@ -1056,7 +1056,7 @@ pre {
     }
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 992px) {
     .hamburger {
         display: block;
     }
